# china-housing-price-analysis

./: .env.example  .env.prod.example  .gitignore  LICENSE  README.md  README_en.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_init_schema.py  002_admin_job_and_adcode.py  003_app_setting.py  004_price_snapshot_source.py  005_price_snapshot_source_isolation.py  006_price_index_snapshot.py  007_simplify_schema.py  008_city_tier.py  009_district_composite_unique.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/collector/: __init__.py  base.py  http_client.py  storage.py
backend/app/core/: cache.py  config.py  database.py  errors.py  logging.py  security.py  source_policy.py
backend/app/ml/: dataset.py  features.py  predict.py  train.py
backend/app/models/: __init__.py  admin_job.py  app_setting.py  area.py  city.py  community.py  crawl_job.py  crawl_log.py  district.py  listing.py  prediction.py  price_distribution.py  price_index_snapshot.py  price_snapshot.py  user.py
backend/app/pipeline/: cleaners.py  loaders.py  runner.py  snapshot_validator.py
backend/app/schemas/: admin_job.py  analytics.py  auth.py  city.py  data_quality.py  predict.py  price.py  settings.py
backend/app/seed/: city_tier_seed.json
backend/app/services/: app_settings.py  city_tier.py  collect_scheduler.py  collect_tasks.py  data_quality.py  geo.py  index_import.py  job_runner.py  nationwide_import.py  price_select.py  seed.py
backend/scripts/: create_admin.py  fetch_geo.py  loadtest.py  run_pipeline.py  seed_scraper.py
backend/seed/: cities.json
backend/seed/prices/: ab.json  ak.json  aks.json  al.json  ale.json  als.json  alt.json  anshun.json  aq.json  as.json  ay.json  baise.json  baisha.json  baishan.json  baoji.json  baoting.json  bazhong.json  bazhou.json  bc.json  bd.json  beitun.json  bengbu.json  bh.json  bijie.json  bj.json  bozhou.json  bozhouxj.json  bs.json  bt.json  bx.json  by.json  byne.json  bz.json  cangzhou.json  (+334 more)
(+400 files in other folders)
