[project]
name = "housing-price-backend"
version = "0.1.0"
description = "城市房价分析系统 - 后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "sqlalchemy[asyncio]>=2,<3",
    "asyncpg>=0.29,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",
    "redis>=5,<6",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt>=4.1,<6",
    "email-validator>=2,<3",
    "httpx>=0.27,<1",
    "requests[socks]>=2.31,<3",
    "lxml>=5,<6",
    "beautifulsoup4>=4.12,<5",
    "apscheduler>=3.10,<4",
    "pandas>=2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "xgboost>=2,<3",
    "joblib>=1.3,<2",
    "statsmodels>=0.14,<1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "aiohttp>=3.9,<4",
    "aiohttp-socks>=0.8,<1",
]

[tool.pytest.ini_options]
markers = [
    "slow: 需要网络的集成/冒烟测试（默认排除，用 -m slow 运行）",
]
